--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,9 +5,9 @@
 $color-light: #fff;
 $color-dark: #444;
 
-$font-logo: 'Sacramento', cursive;
-$font-header: 'Oswald', sans-serif;
-$font-text: 'Source Sans Pro', sans-serif;
+$font-header: 'Montserrat', sans-serif;
+$font-text: 'Raleway', sans-serif;
+$font-logo: 'Oxygen', sans-serif;
 
 /* Global */
 
