Update json with removing test, correct generating tags, add function addClickListeners

--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,109 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext");
 /* Variables */
 /* Global */
-*, *::before, *::after { box-sizing: border-box; }
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
-body { background: #fff; font-family: "Raleway", sans-serif; color: #444; font-weight: 300; font-size: 16px; line-height: 1.7; }
+body {
+  background: #fff;
+  font-family: "Raleway", sans-serif;
+  color: #444;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.7;
+}
 
-.container { max-width: 1140px; margin: 0 auto; }
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 
-.section-title { font-size: 22px; text-transform: uppercase; font-family: "Montserrat", sans-serif; font-weight: 600; }
+.section-title {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+}
 
-.section-title span { text-transform: none; font-weight: 400; color: #777777; }
+.section-title span {
+  text-transform: none;
+  font-weight: 400;
+  color: #777777;
+}
 
 /* Layout */
-.wrapper { display: -ms-flexbox; display: flex; margin-left: 10px; }
+.wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 10px;
+}
 
-.sidebar { -ms-flex: 1 0 0px; flex: 1 0 0; }
+.sidebar {
+  -ms-flex: 1 0 0px;
+      flex: 1 0 0;
+}
 
-.films { -ms-flex: 2 0 0px; flex: 2 0 0; }
+.films {
+  -ms-flex: 2 0 0px;
+      flex: 2 0 0;
+}
 
-.sidebar, .films { background: #fff; margin-right: 10px; padding: 40px; border: none; }
+.sidebar, .films {
+  background: #fff;
+  margin-right: 10px;
+  padding: 40px;
+  border: none;
+}
 
 /* Logo */
-.logo { font-family: "Oxygen", sans-serif; font-weight: 400; font-size: 104px; line-height: 1; text-align: center; }
+.logo {
+  font-family: "Oxygen", sans-serif;
+  font-weight: 400;
+  font-size: 104px;
+  line-height: 1;
+  text-align: center;
+}
 
 /* Lists */
-.list { list-style-type: none; margin: 0; padding: 0; }
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-.list .active { font-weight: bold; }
+.list .active {
+  font-weight: bold;
+}
 
-.list-horizontal li { display: inline-block; }
+.list-horizontal li {
+  display: inline-block;
+}
 
 /* Authors */
-.authors li { margin-bottom: 12px; }
+.authors li {
+  margin-bottom: 12px;
+}
 
 /* Post */
-.film { display: none; }
+.film {
+  display: none;
+}
 
-.film.active { display: block; }
+.film.active {
+  display: block;
+}
 
-.film-author { font-style: italic; }
+.film-author {
+  font-style: italic;
+}
 
-.film-tags { display: -ms-flexbox; display: flex; }
+.film-tags {
+  display: -ms-flexbox;
+  display: flex;
+}
 
-.film-tags p { margin: 0 10px 0 0; }
+.film-tags p {
+  margin: 0 10px 0 0;
+}
+/*# sourceMappingURL=style.css.map */
