--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a:hover {
   margin-bottom: 12px;
 }
 
-/* Post */
+/* film */
 .film {
   display: none;
 }
@@ -127,5 +127,26 @@ a:hover {
 .film-photo img {
   object-fit: cover;
   max-width: 100%;
+}
+
+/*tags list*/
+.tag-size-1 {
+  font-size: 80%;
+}
+
+.tag-size-2 {
+  font-size: 90%;
+}
+
+.tag-size-3 {
+  font-size: 100%;
+}
+
+.tag-size-4 {
+  font-size: 110%;
+}
+
+.tag-size-5 {
+  font-size: 120%;
 }
 /*# sourceMappingURL=style.css.map */
