--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,10 +17,13 @@ $tag-fs1: 80%;
 $tag-fs2: 90%;
 $tag-fs3: 100%;
 $tag-fs4: 110%;
+$tag-fs5: 120%;
 
 $author-fs1: 80%;
 $author-fs2: 90%;
 $author-fs3: 100%;
+$author-fs4: 110%;
+$author-fs5: 120%;
 
 
 /* Global */
